--- a/portfolio skola new/click.html
+++ b/portfolio skola new/click.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
-    <link rel="stylesheet" href="Styles/styles_projects.css">
     <link rel="stylesheet" href="Styles/styles_click1.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
@@ -19,11 +18,11 @@
             <li><a class="active" href="/index.html">
                 About me </a></li>
 
-            <li><a href="/projects.html">
+            <li><a href="index.html">
                 Info</a></li>
 
-            <li><a href="/contact.html">
-                Work</a></li>
+            <li><a href="projects.html">
+                2D Work</a></li>
         </ul>
         <li><a href="click.html" class="Click">Web Work</a></li>
         </nav>
